--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -2,7 +2,7 @@
 name: 🚀 Feature Request
 description: Suggest an idea for this project
 title: "(short issue description)"
-labels: [feature-request]
+labels: [feature-request, enhancement]
 assignees: []
 body:
   - type: textarea
